First working iteration
Changes to both HTML and CSS to support requirements.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Our Menu</title>
+	<link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-	<h1>Chicken</h1>
-	<h1>Beef</h1>
-	<h1>Sushi</h1>
+	<h1>Our Menu</h1>
+
+	<div id="container" class="col-lg-4 col-md-6 col-sm-1">
+
+		<p id="sh1">Chicken</p>
+
+		<p id="p1" >Our chicken menu items are the best in town! Try some today!
+		</p>
+	</div>
+
+	<div id="container" class="col-lg-4 col-md-6 col-sm-1">
+		<p id="sh2">Beef
+		</p>
+		<p id="p2">Our beef menu items are the best in town! Try some today!
+		</p>
+	</div>
+
+	<div id="container" class="col-lg-4 col-md-6 col-sm-1">
+		<p id="sh3" >Sushi</p>
+		<p id="p3">Our sushi menu items are the best in town! Try some today!</p>
+	</div>
 </body>
 </html>
