--- a/index.html
+++ b/index.html
@@ -9,24 +9,24 @@
 <body>
 	<h1>Our Menu</h1>
 
-	<div id="container" class="col-lg-4 col-md-6 col-sm-1">
+	<div class="col-lg-4 col-md-6 col-sm-12">
 
 		<p id="sh1">Chicken</p>
 
-		<p id="p1" >Our chicken menu items are the best in town! Try some today!
+		<p id="p1" >Our menu items are the best in town! Try our best selections today.
 		</p>
 	</div>
 
-	<div id="container" class="col-lg-4 col-md-6 col-sm-1">
+	<div class="col-lg-4 col-md-6 col-sm-12">
 		<p id="sh2">Beef
 		</p>
-		<p id="p2">Our beef menu items are the best in town! Try some today!
+		<p id="p2">Our menu items are the best in town! Try our best selections today.
 		</p>
 	</div>
 
-	<div id="container" class="col-lg-4 col-md-6 col-sm-1">
+	<div class="col-lg-4 col-md-12 col-sm-12">
 		<p id="sh3" >Sushi</p>
-		<p id="p3">Our sushi menu items are the best in town! Try some today!</p>
+		<p id="p3">Our menu items are the best in town! Try our best selections today.</p>
 	</div>
 </body>
 </html>
